2009-11-19  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Forces a WM_PAINT event on calling layoutTestController.display()
        in order to enable the timeline-paint.html test on Windows.
        ::UpdateWindow() does not force an event becaue the window is 
        not visible.

        https://bugs.webkit.org/show_bug.cgi?id=31402

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (displayWebView):

2009-11-19  Michelangelo De Simone  <michelangelo@webkit.org>

        No review needed.

        Added myself to committers list.

        * Scripts/modules/committers.py:

2009-11-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Bugzilla-tool command classes should match command names
        https://bugs.webkit.org/show_bug.cgi?id=31666

        I renamed all the commands except CommitMessageForCurrentDiff because
        the new name would conflict with an existing class.

        * Scripts/bugzilla-tool:

2009-11-19  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Gustavo Noronha Silva.

        Web Inspector: Implement "show inspector" in WebKit GTK
        API and enable console tests.

        https://bugs.webkit.org/show_bug.cgi?id=31669

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::showWebInspector):

2009-11-19  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Minor refactoring + more documentation.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::clearHistory):
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):

2009-11-19  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Eric Seidel.

        Ignore websocket tests when --no-http is specified.
        https://bugs.webkit.org/show_bug.cgi?id=31662

        * Scripts/run-webkit-tests:

2009-11-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.
